# Falcon-PBR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: camera.h  cubemap.h  fpsCameraController.h  gltfScene.h  gltfTextureCache.h  iCameraController.h  indexBuffer.h  lightComponent.h  material.h  model.h  phongLightManager.h  renderer.h  shader.h  simpleModel.h  texture.h  transform.h  uboArray.h  uniformBuffer.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h
media/RenderDocCaptures/: first-model.rdc  first-triangle.rdc  triangle-with-working-camera.rdc
resources/shaders/: fragmentGltf.frag  fragmentShader.frag  phongFragment.frag  phongVertex.vert  skyBoxFragment.frag  skyBoxVertex.vert  vertexGltf.vert  vertexShader.vert
src/: camera.cpp  cubemap.cpp  fpsCameraController.cpp  gltfScene.cpp  gltfTextureCache.cpp  indexBuffer.cpp  lightComponent.cpp  material.cpp  phongLightManager.cpp  renderer.cpp  shader.cpp  simpleModel.cpp  texture.cpp  transform.cpp  uboArray.cpp  uniformBuffer.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp
